fix(login): reduce to 2 scattered groups, no overlap

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@
   z-index: -1;
 
   background-color: #0b0b0b;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='500' height='500' viewBox='0 0 500 500'%3E%3Cg stroke='%23F6B31A' stroke-width='21' fill='none' stroke-linecap='round'%3E%3Cpath d='M50 100V30H120'/%3E%3Cpath d='M180 30H250V100'/%3E%3Cpath d='M50 160V230H120'/%3E%3Cpath d='M180 230H250V160'/%3E%3Cpath d='M280 370V300H350'/%3E%3Cpath d='M410 300H480V370'/%3E%3Cpath d='M280 430V500H350'/%3E%3Cpath d='M410 500H480V430'/%3E%3Cpath d='M380 30V-40H450'/%3E%3Cpath d='M510 -40H580V30'/%3E%3Cpath d='M380 90V160H450'/%3E%3Cpath d='M510 160H580V90'/%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='500' height='500' viewBox='0 0 500 500'%3E%3Cg stroke='%23F6B31A' stroke-width='21' fill='none' stroke-linecap='round'%3E%3Cpath d='M20 100V30H90'/%3E%3Cpath d='M150 30H220V100'/%3E%3Cpath d='M20 160V230H90'/%3E%3Cpath d='M150 230H220V160'/%3E%3Cpath d='M300 390V320H370'/%3E%3Cpath d='M430 320H500V390'/%3E%3Cpath d='M300 450V520H370'/%3E%3Cpath d='M430 520H500V450'/%3E%3C/g%3E%3C/svg%3E");
   background-repeat: repeat;
   background-size: 500px 500px;
 
